--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
     "validator": "^13.5.2"
