--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "set NODE_ENV=dev && nodemon index.ts",
-    "start": "node index.ts",
+    "dev": "set NODE_ENV=dev && nodemon",
+    "start": "node build/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
