--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.0.2",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.2"
   },
   "devDependencies": {
@@ -49,6 +51,8 @@
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.22",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.3",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
