--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ COVID_API_KEY=90b79bebd7msh2171c230036ebe4p1c2addjsn100023574291
 USER_DB=covid19
 USER_PWD=cwXwGJFVLQgorzKW
 DB_NAME=covid19db
-DB_HOST=dev.wol1z.mongodb.net
+DB_HOST=dev.eehnz1a.mongodb.net
