--- a/package.json
+++ b/package.json
@@ -28,34 +28,34 @@
   "license": "ISC",
   "homepage": "https://github.com/sordoneza/covid-19-statistics-api.git#readme",
   "dependencies": {
-    "axios": "^1.6.4",
-    "bcrypt": "^5.0.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^9.0.0",
-    "jwt-decode": "^3.1.2",
-    "mongoose": "^8.0.0",
-    "morgan": "^1.10.0",
-    "swagger-jsdoc": "^6.0.2",
-    "swagger-ui-express": "^4.1.6",
-    "validator": "^13.5.2"
+    "axios": "1.6.4",
+    "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.5",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.19.2",
+    "jsonwebtoken": "9.0.0",
+    "jwt-decode": "3.1.2",
+    "mongoose": "8.0.0",
+    "morgan": "1.10.0",
+    "swagger-jsdoc": "6.0.2",
+    "swagger-ui-express": "4.1.6",
+    "validator": "13.11.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.9",
-    "@types/express": "^4.17.11",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.10.3",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.22",
-    "@types/swagger-jsdoc": "^6.0.0",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/validator": "^13.1.3",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@types/bcrypt": "3.0.0",
+    "@types/cookie-parser": "1.4.2",
+    "@types/cors": "2.8.9",
+    "@types/express": "4.17.11",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/mongoose": "5.11.97",
+    "@types/morgan": "1.9.2",
+    "@types/node": "14.14.22",
+    "@types/swagger-jsdoc": "6.0.0",
+    "@types/swagger-ui-express": "4.1.2",
+    "@types/validator": "13.1.3",
+    "nodemon": "2.0.7",
+    "ts-node": "9.1.1",
+    "typescript": "4.1.3"
   }
 }
